--- a/client/src/styles/create/ingredients.css
+++ b/client/src/styles/create/ingredients.css
@@ -1,13 +1,14 @@
 .ingredients-section {
   background-color: #f9f9f9;
-  border-radius: 8px;
+  border-radius: 10px;
   padding: 20px;
-  margin: 20px 0px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin: 20px 0;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
 }
 
 .ingredients-section h2 {
-  color: #333;
+  color: #34495e;
+  font-size: 1.5rem;
   margin-bottom: 15px;
 }
 
@@ -19,13 +20,21 @@
   width: 100%;
   padding: 10px;
   border: 1px solid #ddd;
-  border-radius: 4px;
-  font-size: 16px;
+  border-radius: 5px;
+  font-size: 1rem;
+  transition: border-color 0.3s;
+}
+
+.ingredient-search:focus {
+  border-color: var(--secondary-green);
+  outline: none;
+  box-shadow: 0 0 4px rgba(46, 204, 113, 0.5);
 }
 
 .ingredients-container {
   display: flex;
-  margin-bottom: 20px;
+  flex-wrap: wrap;
+  gap: 15px;
 }
 
 .ingredients-list {
@@ -33,20 +42,26 @@
   max-height: 300px;
   overflow-y: auto;
   border: 1px solid #ddd;
-  border-radius: 4px;
+  border-radius: 5px;
   padding: 10px;
+  background-color: #ffffff;
 }
 
 .ingredient-item {
   display: flex;
   align-items: center;
-  padding: 8px 0;
+  padding: 10px;
+  margin: 5px 0;
+  border-radius: 5px;
   cursor: pointer;
-  transition: background-color 0.2s;
+  transition:
+    background-color 0.2s,
+    box-shadow 0.2s;
 }
 
 .ingredient-item:hover {
-  background-color: #f0f0f0;
+  background-color: #ecf0f1;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .ingredient-item input[type="checkbox"] {
@@ -54,32 +69,43 @@
 }
 
 .ingredient-name {
-  font-size: 14px;
+  font-size: 1rem;
+  color: #34495e;
 }
 
 .selected-ingredients {
-  background-color: #e9f7ef;
-  border-radius: 4px;
+  background-color: var(--secondary-green);
+  border-radius: 5px;
   padding: 15px;
   margin-top: 20px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
 }
 
 .selected-ingredients h3 {
-  color: #2ecc71;
+  color: black;
+  font-size: 1.2rem;
   margin-bottom: 10px;
 }
 
 .selected-ingredients ul {
   list-style-type: none;
   padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
 }
 
 .selected-ingredients li {
-  background-color: #2ecc71;
-  color: white;
-  padding: 5px 10px;
-  margin: 5px 0;
-  border-radius: 3px;
-  display: inline-block;
-  margin-right: 5px;
+  background-color: var(--primary-green);
+  color: #ffffff;
+  padding: 8px 12px;
+  border-radius: 5px;
+  display: inline-flex;
+  align-items: center;
+  gap: 10px;
+  margin: 0;
+}
+
+.selected-ingredients li:not(:last-child) {
+  margin-right: 10px;
 }
