--- a/client/src/styles/panelAdmin/AdminRecipes.css
+++ b/client/src/styles/panelAdmin/AdminRecipes.css
@@ -45,21 +45,86 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
 
-.recipe-AdminCard .delete-button {
+.recipe-input {
+  width: 90%;
+  padding: 10px;
+  font-size: 14px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  box-sizing: border-box;
+}
+
+.recipe-buttons {
+  display: flex; /* Les boutons sur une ligne */
+  justify-content: center; /* Centrer les boutons */
+  gap: 10px; /* Espacement entre les boutons */
+  width: 100%;
+}
+
+.recipe-buttons .save-button {
+  padding: 8px 12px;
+  font-size: 14px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: var(--primary-green);
+  color: white;
+}
+
+.recipe-buttons .save-button:hover {
+  background-color: green;
+}
+
+.recipe-buttons .cancel-button {
+  padding: 8px 12px;
+  font-size: 14px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: gray;
+  color: white;
+}
+
+.recipe-buttons .cancel-button:hover {
+  background-color: darkgray;
+}
+
+.actions-buttons {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 15px;
+}
+
+.edit-button {
+  background: none;
+  border: none;
+  color: blue;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.edit-button:hover {
+  color: darkblue;
+}
+
+.remove-button {
   background: none;
   border: none;
   color: red;
   font-size: 20px;
   cursor: pointer;
-  position: absolute;
-  top: 10px;
-  right: 10px;
+}
+
+.remove-button:hover {
+  color: darkred;
 }
 
 .back-button {
@@ -88,6 +153,7 @@
     width: 250px;
     height: 300px;
   }
+
   .recipe-AdminCard:hover {
     transform: scale(1.03);
   }
@@ -107,15 +173,11 @@
     white-space: nowrap;
   }
 
-  .recipe-AdminCard .delete-button {
-    top: auto;
-    bottom: 10px;
-    right: 10px;
-  }
   .back-button {
     width: 12rem;
     padding: 1rem;
   }
+
   .back-button:active {
     transform: scale(1.03);
   }
